# TeXMath-Rust

./: .gitignore  Cargo.toml  README.md  ast  config.toml  output
.history/: Cargo_20240124132250.toml
src/: config.rs  main.rs
src/ast/: ast_reader.rs  ast_reader_2.rs  env_unicode.rs  judge.rs  mod.rs  node.rs  parser.rs  rw.rs  server.rs  shared.rs  shares.rs  tex.rs  tex_unicode.rs  tex_writer.rs  to_tex_unicode.rs  to_tex_unicode_table.csv  to_tex_unicode_table_extra.csv
src/ast/tables/: tex_cmd_table.csv  text_unicode_table.csv
