[package]
name = "texmath-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
lazy_static = "1.4"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
ahash = "0.8.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }