[package]
name = "texmath-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
lazy_static = "1.4"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
ahash = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
unicode-general-category = "0.6.0"
axum = "0.7"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.8"
